--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Page meta. -->
     <meta charset="UTF-8">
-    <title>Zeus &#8212; A BEM flexbox grid framework.</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="A BEM flexbox grid framework">
+    <meta property="og:site_name" content="Zeus">
+    <meta property="og:url" content="http://enzyme.github.io/zeus/">
+    <meta property="og:description" content="A BEM flavoured, mobile first flexbox grid. It's 12 columns, flexible and does what you expect from a grid framework. Designed for mobile first development the grid is responsive to a variety of different viewport sizes.">
+    <meta property="fb:app_id" content="">
+    <meta property="og:type" content="website">
+    <meta name="description" content="A BEM flavoured, mobile first flexbox grid. It's 12 columns, flexible and does what you expect from a grid framework. Designed for mobile first development the grid is responsive to a variety of different viewport sizes.">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Tristan Strathearn">
+    <title>Zeus &#8212; A BEM flexbox grid framework.</title>
+
+    <!-- Page styles. -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/develop/bin/zeus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/codepen-embed.min.css">
