Add partial implementation of documentation page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>
                 <a href="https://raw.githubusercontent.com/enzyme/zeus/master/bin/zeus.min.css" class="Hero__btn Hero__btn--cta"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                 <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
-                <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-book" aria-hidden="true"></i> Docs</a>
+                <a href="docs.html" class="Hero__btn"><i class="fa fa-book" aria-hidden="true"></i> Docs</a>
             </p>
             <p>
                 <span class="Hero__code">npm install zeus-grid</span>
@@ -235,6 +235,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Page scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script>
