Update docs page.

--- a/docs.html
+++ b/docs.html
@@ -132,9 +132,9 @@
                     <h1 id="column" class="Heading Heading--h1">Column</h1>
                     <ul class="ClassMap">
                         <li class="ClassMap__parent">Layout__column</li>
-                        <li class="ClassMap__child">--gapless</li>
                     </ul>
                     <p class="Paragraph">Columns are were all the magic happens. Brace yourselves for magical things.</p>
+                    <p><strong>Documentation coming soon!</strong></p>
                 </div>
             </div>
         </div>
