--- a/docs.html
+++ b/docs.html
@@ -157,12 +157,12 @@
                         <li class="ClassMap__child">--[%-]third</li>
                         <li class="ClassMap__child">--[%-]two-thirds</li>
                         <li class="ClassMap__child">--[%-]half</li>
+                        <li class="ClassMap__child">--[%-]text-left</li>
+                        <li class="ClassMap__child">--[%-]text-right</li>
+                        <li class="ClassMap__child">--[%-]text-center</li>
+                        <li class="ClassMap__child">--[%-]text-justify</li>
                         <li class="ClassMap__meta">[%-] is the optional viewport size, xs-, sm-, md-, lg- or xl-.</li>
                         <li class="ClassMap__meta"># is the column size, eg: 1, 2, 6, 12.</li>
-                        <li class="ClassMap__child">--text-left</li>
-                        <li class="ClassMap__child">--text-right</li>
-                        <li class="ClassMap__child">--text-center</li>
-                        <li class="ClassMap__child">--text-justify</li>
                         <li class="ClassMap__child">--hidden-%</li>
                         <li class="ClassMap__meta">% is the viewport size, xs, sm, md, lg or xl.</li>
                         <li class="ClassMap__child">--fill-parent</li>
