Add reference to new row flow modifiers.

--- a/docs.html
+++ b/docs.html
@@ -142,6 +142,11 @@
                         <li class="ClassMap__child">--valign-center</li>
                         <li class="ClassMap__child">--valign-baseline</li>
                         <li class="ClassMap__child">--valign-stretch</li>
+                        <li class="ClassMap__child">--[%-]flow-row</li>
+                        <li class="ClassMap__child">--[%-]flow-row-reverse</li>
+                        <li class="ClassMap__child">--[%-]flow-column</li>
+                        <li class="ClassMap__child">--[%-]flow-column-reverse</li>
+                        <li class="ClassMap__meta">[%-] is the optional viewport size, xs-, sm-, md-, lg- or xl-.</li>
                     </ul>
                     <p class="Paragraph">Rows are exactly what you'd expect. The two most important modifiers you'll likely use are <code class="Code">Layout__row--gapless</code> which creates rows that contain columns without gutters, and <code class="Code">Layout__row--wrap</code> which allows rows to contain more columns that they'd naturally fit horizontally.</p>
                     <p class="Paragraph Paragraph--no-bottom">An example of a standard row with 3 columns.</p>
