--- a/docs.html
+++ b/docs.html
@@ -136,6 +136,7 @@
                         <li class="ClassMap__parent">Layout__row</li>
                         <li class="ClassMap__child">--gapless</li>
                         <li class="ClassMap__child">--bottomless</li>
+                        <li class="ClassMap__child">--edgeless</li>
                         <li class="ClassMap__child">--wrap</li>
                         <li class="ClassMap__child">--valign-top</li>
                         <li class="ClassMap__child">--valign-bottom</li>
