--- a/docs.html
+++ b/docs.html
@@ -282,11 +282,10 @@
                 <div class="Layout__column">
                     <h1 id="metro" class="Heading Heading--h1">Metro</h1>
                     <ul class="ClassMap">
-                        <li class="ClassMap__parent">Layout__column</li>
-                        <li class="ClassMap__child">--fill-parent</li>
-                        <li class="ClassMap__child">--fill-child</li>
+                        <li class="ClassMap__parent">util-zeus-fill-parent</li>
+                        <li class="ClassMap__parent">util-zeus-fill-child</li>
                     </ul>
-                    <p class="Paragraph">One additional benefit of using flexbox is it's extremely easy to create metro style grids using Zeus. All you need to do is use the modifiers <code class="Code">Layout__row--valign-stretch</code> <code class="Code">Layout__column--fill-parent</code> and <code class="Code">Layout__column--fill-child</code> inside of a standard grid setup.</p>
+                    <p class="Paragraph">One additional benefit of using flexbox is it's extremely easy to create metro style grids using Zeus. All you need to do is use the modifier <code class="Code">Layout__row--valign-stretch</code> and the utility classes <code class="Code">util-zeus-fill-parent</code> and <code class="Code">util-zeus-fill-child</code> inside of a standard grid setup.</p>
                 </div>
             </div>
             <div class="Layout__row Layout__row--wrap Layout__row--valign-stretch">
@@ -300,8 +299,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="Layout__column Layout__column--fill-parent Layout__column--8">
-                    <p class="ExampleColumn Layout__column--fill-child">Metro!</p>
+                <div class="Layout__column util-zeus-fill-parent Layout__column--8">
+                    <p class="ExampleColumn util-zeus-fill-child">Metro!</p>
                 </div>
                 <div class="Layout__column Layout__column--8">
                     <div class="Layout__row Layout__row--wrap">
@@ -316,8 +315,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="Layout__column Layout__column--fill-parent Layout__column--4">
-                    <p class="ExampleColumn Layout__column--fill-child">Metro!</p>
+                <div class="Layout__column util-zeus-fill-parent Layout__column--4">
+                    <p class="ExampleColumn util-zeus-fill-child">Metro!</p>
                 </div>
             </div>
             <div class="Layout__row">
@@ -333,8 +332,8 @@
             &lt;/div&gt;
         &lt;/div&gt;
     &lt;/div&gt;
-    &lt;div class=&quot;Layout__column Layout__column--fill-parent Layout__column--8&quot;&gt;
-        &lt;p class=&quot;MetroTile Layout__column--fill-child&quot;&gt;Metro!&lt;/p&gt;
+    &lt;div class=&quot;Layout__column util-zeus-fill-parent Layout__column--8&quot;&gt;
+        &lt;p class=&quot;MetroTile util-zeus-fill-child&quot;&gt;Metro!&lt;/p&gt;
     &lt;/div&gt;
     &lt;div class=&quot;Layout__column Layout__column--8&quot;&gt;
         &lt;div class=&quot;Layout__row Layout__row--wrap&quot;&gt;
@@ -349,15 +348,15 @@
             &lt;/div&gt;
         &lt;/div&gt;
     &lt;/div&gt;
-    &lt;div class=&quot;Layout__column Layout__column--fill-parent Layout__column--4&quot;&gt;
-        &lt;p class=&quot;MetroTile Layout__column--fill-child&quot;&gt;Metro!&lt;/p&gt;
+    &lt;div class=&quot;Layout__column util-zeus-fill-parent Layout__column--4&quot;&gt;
+        &lt;p class=&quot;MetroTile util-zeus-fill-child&quot;&gt;Metro!&lt;/p&gt;
     &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                 </div>
             </div>
             <div class="Layout__row">
                 <div class="Layout__column">
-                    <p class="Paragraph">As you probably noticed in the example, we added the <code class="Code">Layout__column--fill-child</code> on our <code class="Code">p</code> tag. All that modifier does is set the css property <code class="Code">flex: 1;</code> - that's it! The rest is taken care of by Zeus.</p>
+                    <p class="Paragraph">As you probably noticed in the example, we added the <code class="Code">util-zeus-fill-child</code> on our <code class="Code">p</code> tag. All that modifier does is set the css property <code class="Code">flex: 1;</code> - that's it! The rest is taken care of by Zeus.</p>
                 </div>
             </div>
         </div>
