--- a/docs.html
+++ b/docs.html
@@ -25,10 +25,10 @@
     <header class="Navigation">
         <div class="Layout">
             <div class="Layout__row Layout__row--gapless Layout__row--valign-center">
-                <div class="Layout__column Layout__column--sm-2 Layout__column--hidden-xs">
+                <div class="Layout__column Layout__column--sm-2 Layout__column--xs-hidden">
                     <a href="index.html"><img src="images/icon.svg" alt="Zeus icon" class="Navigation__icon"></a>
                 </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-10 Layout__column--text-right">
+                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-10 Layout__column--text-right Layout__column--xs-text-center">
                     <ul class="Navigation__list">
                         <li class="Navigation__item">
                             <a href="index.html" class="Navigation__link">
@@ -114,6 +114,7 @@
                         <li class="ClassMap__parent">Layout</li>
                         <li class="ClassMap__child">--fluid</li>
                         <li class="ClassMap__child">--hero</li>
+                        <li class="ClassMap__child">--edgeless</li>
                     </ul>
                     <p class="Paragraph">The container (otherwise known as the <strong>Layout</strong>) holds it all together. It can have a specific width, or it may be fluid - the decision is yours.</p>
                     <p class="Paragraph">A standard container is simply a <code class="Code">div</code> with a class of <code class="Code">Layout</code>, while a fluid container has the classes <code class="Code">Layout Layout--fluid</code>.</p>
@@ -136,7 +137,6 @@
                         <li class="ClassMap__parent">Layout__row</li>
                         <li class="ClassMap__child">--gapless</li>
                         <li class="ClassMap__child">--bottomless</li>
-                        <li class="ClassMap__child">--edgeless</li>
                         <li class="ClassMap__child">--wrap</li>
                         <li class="ClassMap__child">--valign-top</li>
                         <li class="ClassMap__child">--valign-bottom</li>
