--- a/index.html
+++ b/index.html
@@ -1,252 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Page meta. -->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="A BEM flexbox grid framework">
-    <meta property="og:site_name" content="Zeus">
-    <meta property="og:url" content="http://enzyme.github.io/zeus/">
-    <meta property="og:description" content="A BEM flavoured, mobile first flexbox grid. It's 12 columns, flexible and does what you expect from a grid framework. Designed for mobile first development the grid is responsive to a variety of different viewport sizes.">
-    <meta property="fb:app_id" content="">
-    <meta property="og:type" content="website">
-    <meta name="description" content="A BEM flavoured, mobile first flexbox grid. It's 12 columns, flexible and does what you expect from a grid framework. Designed for mobile first development the grid is responsive to a variety of different viewport sizes.">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Tristan Strathearn">
-    <title>Zeus &#8212; A BEM flexbox grid framework.</title>
-
-    <!-- Page styles. -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/master/bin/zeus.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/codepen-embed.min.css">
+    <title>Zeus - a novel mobile first grid system.</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/v7.0.0/bin/zeus.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:900|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="bin/index.css">
 </head>
-<body>
-    <header class="Hero">
-        <div class="Hero__box">
-            <img src="images/icon.svg" alt="Zeus icon" class="Hero__icon">
-            <h1 class="Hero__title">ZEUS</h1>
-            <p class="Hero__slogan">A BEM flavoured, mobile first <strong>flexbox</strong> grid framework.</p>
-            <p>
-                <a href="https://raw.githubusercontent.com/enzyme/zeus/master/bin/zeus.min.css" class="Hero__btn Hero__btn--cta"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
-                <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
-                <a href="docs.html" class="Hero__btn"><i class="fa fa-book" aria-hidden="true"></i> Docs</a>
-            </p>
-            <p>
-                <span class="Hero__code">npm install zeus-grid</span>
-                <span class="Hero__code">bower install zeus-grid</span>
-            </p>
-        </div>
-        <div class="Hero__mouse mouse-icon"><div class="wheel"></div></div>
-    </header>
-    <section class="Slice">
-        <div class="Layout">
-            <div class="Layout__row">
-                <div class="Layout__column">
-                    <h1 class="Heading Heading--h1">The Grid</h1>
-                    <p class="Paragraph">Say hello to the standard grid. It's 12 columns, flexible and does what you expect from a grid framework.</p>
-                </div>
-            </div>
-            <div class="Layout__row">
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-                <div class="Layout__column Layout__column--1">
-                    <p class="ExampleColumn">1</p>
-                </div>
-            </div>
-            <div class="Layout__row">
-                <div class="Layout__column Layout__column--2">
-                    <p class="ExampleColumn">2</p>
-                </div>
-                <div class="Layout__column Layout__column--2">
-                    <p class="ExampleColumn">2</p>
-                </div>
-                <div class="Layout__column Layout__column--2">
-                    <p class="ExampleColumn">2</p>
-                </div>
-                <div class="Layout__column Layout__column--2">
-                    <p class="ExampleColumn">2</p>
-                </div>
-                <div class="Layout__column Layout__column--2">
-                    <p class="ExampleColumn">2</p>
-                </div>
-                <div class="Layout__column Layout__column--2">
-                    <p class="ExampleColumn">2</p>
-                </div>
-            </div>
-            <div class="Layout__row">
-                <div class="Layout__column Layout__column--3">
-                    <p class="ExampleColumn">3</p>
-                </div>
-                <div class="Layout__column Layout__column--3">
-                    <p class="ExampleColumn">3</p>
-                </div>
-                <div class="Layout__column Layout__column--3">
-                    <p class="ExampleColumn">3</p>
-                </div>
-                <div class="Layout__column Layout__column--3">
-                    <p class="ExampleColumn">3</p>
-                </div>
-            </div>
-            <div class="Layout__row">
-                <div class="Layout__column Layout__column--4">
-                    <p class="ExampleColumn">4</p>
-                </div>
-                <div class="Layout__column Layout__column--4">
-                    <p class="ExampleColumn">4</p>
-                </div>
-                <div class="Layout__column Layout__column--4">
-                    <p class="ExampleColumn">4</p>
-                </div>
-            </div>
-            <div class="Layout__row">
-                <div class="Layout__column Layout__column--6">
-                    <p class="ExampleColumn">6</p>
-                </div>
-                <div class="Layout__column Layout__column--6">
-                    <p class="ExampleColumn">6</p>
-                </div>
-            </div>
-            <div class="Layout__row">
-                <div class="Layout__column Layout__column--12">
-                    <p class="ExampleColumn">12</p>
-                </div>
-            </div>
-            <div class="Layout__row Layout__row--wrap">
-                <div class="Layout__column Layout__column--xs-12">
-                    <p>Here's an example!</p>
-                </div>
-                <div class="Layout__column Layout__column--xs-12">
-<pre class="Pre"><code class="html">&lt;div class=&quot;Layout&quot;&gt;
-    &lt;div class=&quot;Layout__row&quot;&gt;
-        &lt;div class=&quot;Layout__column Layout__column--xs-3&quot;&gt;
-            &lt;p&gt;Tellus Quam Purus Risus Etiam&lt;/p&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;Layout__column Layout__column--xs-3&quot;&gt;
-            &lt;p&gt;Risus Aenean Ridiculus Consectetur Bibendum&lt;/p&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;Layout__column Layout__column--xs-3&quot;&gt;
-            &lt;p&gt;Risus Porta Ultricies&lt;/p&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;Layout__column Layout__column--xs-3&quot;&gt;
-            &lt;p&gt;Sit Ultricies Euismod Inceptos&lt;/p&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;</code></pre>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="Slice">
-        <div class="Layout">
-            <div class="Layout__row">
-                <div class="Layout__column">
-                    <h1 class="Heading Heading--h1">Responsive</h1>
-                    <p class="Paragraph">Designed for mobile first development and inspired by <a href="http://v4-alpha.getbootstrap.com/" class="Link">Bootstrap</a>, the grid is responsive to a variety of different viewport sizes.</p>
-                    <p class="Paragraph">Go ahead and try resizing your browser window!</p>
-                </div>
-            </div>
-            <div class="Layout__row Layout__row--wrap">
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
-                    <h2 class="Heading Heading--h2">Flex</h2>
-                    <p class="Paragraph">Each column takes up an equal amount of space on the grid across all viewports, or a specific percentage using the size modifiers.</p>
-                    <p class="Paragraph"><code class="Code">.Layout__column</code> or</p>
-                    <p class="Paragraph"><code class="Code">.Layout__column--*</code></p>
-                </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
-                    <h2 class="Heading Heading--h2">XS <code class="Heading__code">&lt;544px</code></h2>
-                    <p class="Paragraph">For tiny devices like mobile phones. These columns are the starting point for any grid which are then overriden by larger viewport modifiers.</p>
-                    <p class="Paragraph"><code class="Code">.Layout__column--xs-*</code></p>
-                </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
-                    <h2 class="Heading Heading--h2">SM <code class="Heading__code">&gt;=544px</code></h2>
-                    <p class="Paragraph">For handheld devices like large phones or small tablets. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Layout__column--sm-*</code></p>
-                </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
-                    <h2 class="Heading Heading--h2">MD <code class="Heading__code">&gt;=768px</code></h2>
-                    <p class="Paragraph">For larger handheld devices such as tablets. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Layout__column--md-*</code></p>
-                </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
-                    <h2 class="Heading Heading--h2">LG <code class="Heading__code">&gt;=992px</code></h2>
-                    <p class="Paragraph">For devices such as laptops or smaller screen desktops. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Layout__column--lg-*</code></p>
-                </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
-                    <h2 class="Heading Heading--h2">XL <code class="Heading__code">&gt;=1200px</code></h2>
-                    <p class="Paragraph">For your large desktop and general purpose displays. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Layout__column--xl-*</code></p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="Slice">
-        <div class="Layout">
-            <div class="Layout__row">
-                <div class="Layout__column">
-                    <h1 class="Heading Heading--h1">Customizable</h1>
-                    <p class="Paragraph">Need a specific container size? Want more gutter space? Need more or less columns? <strong>We've got you covered!</strong></p>
-                    <p class="Paragraph">Simply by using the <code class="Code">SASS</code> version of Zeus, you can override the variables <code class="Code">$container-width</code> <code class="Code">$gutter-width</code> and <code class="Code">$column-count</code> respectively.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="Slice">
-        <div class="Layout">
-            <div class="Layout__row">
-                <div class="Layout__column Layout__column--text-center">
-                    <p class="Paragraph"><i class="fa fa-hand-peace-o fa-2x" aria-hidden="true"></i></p>
-                    <p class="Paragraph">Created by <a href="https://github.com/enzyme" class="Link">Tristan Strathearn</a>.</p>
-                    <p class="Paragraph">Licensed under the <code class="Code">MIT</code> license &#8212; It's free, go ahead and try it out!</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Page scripts. -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-77219606-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+<body class="Body">
+    <!--  -->
 </body>
 </html>
